# libysmm

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
examples/: a.out  compile.sh  exp.sh  input.csv  output.csv  run.sh  smm.c  write.sh
include/: cl.h  common.h  config.h  config.h.cmake  libysmm.h  libysmm_cl.h  libysmm_cl_common.h
src/: cl.cpp  libysmm.cpp  libysmm_cl.cpp
src/kernels/: basic.cl  tiled.cl
